--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
           <img src="images/Ascend_Logo_512x512_Trans.png" class="u-logo-image u-logo-image-1">
         </a>
       </div></header>
-    <section class="u-align-center u-clearfix u-image u-shading u-section-1" id="block-2" data-image-width="1380" data-image-height="996">
+    <section class="u-align-center u-clearfix u-image u-shading u-section-1" id="block-2" data-image-width="2000" data-image-height="1336">
       <div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xs u-sheet-1">
-        <h1 class="u-align-center u-text u-text-default u-text-1">Algorithmic Growth Systems for Experts</h1>
+        <h1 class="u-align-center u-text u-text-1">Algorithmic Growth Systems for Experts</h1>
         <h2 class="u-align-center u-text u-text-2">Amy Harrill Guides Established Service-Based Business Owners To Align Algorithms with Intelligent Systems To Create Predictable Revenue Without Constant Hustle<br>
         </h2>
         <p class="u-align-center u-text u-text-default u-text-3"> Most experts are overwhelmed by algorithmic chaos, unpredictable revenue and a business that takes more time than it gives back.&nbsp;You shouldn't have to sacrifice your life to scale your expertise. Without a system to manage them, most experts stay exhausted and inconsistent. Amy Harrill helps experts create clarity, predictability, and freedom with a growth system designed to work for them.</p>
@@ -54,7 +54,7 @@
         </div>
       </div>
     </section>
-    <section class="u-align-center u-clearfix u-section-2" id="block-3">
+    <section class="u-align-center u-clearfix u-container-align-center u-section-2" id="block-3">
       <div class="u-align-left u-clearfix u-sheet u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xs u-sheet-1">
         <h2 class="u-text u-text-1">Problems Experts Experience</h2>
         <div class="u-expanded-width u-list u-list-1">
@@ -92,7 +92,7 @@
         </div>
       </div>
     </section>
-    <section class="u-align-center u-clearfix u-white u-section-3" src="" id="sec-f905">
+    <section class="u-align-center u-clearfix u-container-align-center u-white u-section-3" src="" id="sec-f905">
       <div class="u-container-align-center u-container-style u-expanded-width u-group u-image u-shading u-image-1" data-image-width="5000" data-image-height="3220" data-animation-name="pulse" data-animation-duration="1000" data-animation-delay="0" data-animation-direction="">
         <div class="u-container-layout u-valign-top-lg u-valign-top-md u-valign-top-sm u-valign-top-xs u-container-layout-1">
           <h2 class="u-align-center u-text u-text-default u-text-1">Systemized Revenue 3-Step Plan</h2>
@@ -100,7 +100,7 @@
       </div>
       <div class="custom-expanded u-list u-list-1">
         <div class="u-repeater u-repeater-1">
-          <div class="u-align-center u-container-style u-list-item u-palette-1-light-3 u-radius u-repeater-item u-shape-round u-list-item-1" data-animation-out="0" data-animation-name="customAnimationIn" data-animation-duration="1000" data-animation-delay="500">
+          <div class="u-align-center u-container-align-center u-container-style u-list-item u-palette-1-light-3 u-radius u-repeater-item u-shape-round u-list-item-1" data-animation-out="0" data-animation-name="customAnimationIn" data-animation-duration="1000" data-animation-delay="500">
             <div class="u-container-layout u-similar-container u-container-layout-2"><span class="u-align-center u-file-icon u-icon u-text-palette-1-base u-icon-1" data-animation-name="" data-animation-duration="0" data-animation-delay="0" data-animation-direction=""><img src="images/7198217-0c058c29.png" alt=""></span>
               <h3 class="u-text u-text-2">Step 1:&nbsp;Define Buyer Psychology<br>
                 <br>
@@ -110,14 +110,14 @@
               </p>
             </div>
           </div>
-          <div class="u-align-center u-container-style u-list-item u-palette-1-light-3 u-radius u-repeater-item u-shape-round u-list-item-2" data-animation-out="0" data-animation-name="customAnimationIn" data-animation-duration="1000" data-animation-delay="500">
+          <div class="u-align-center u-container-align-center u-container-style u-list-item u-palette-1-light-3 u-radius u-repeater-item u-shape-round u-list-item-2" data-animation-out="0" data-animation-name="customAnimationIn" data-animation-duration="1000" data-animation-delay="500">
             <div class="u-container-layout u-similar-container u-container-layout-3"><span class="u-align-center u-file-icon u-icon u-text-palette-1-base u-icon-2" data-animation-name="" data-animation-duration="0" data-animation-delay="0" data-animation-direction=""><img src="images/9541346-72178cdb.png" alt=""></span>
               <h3 class="u-text u-text-4">Step 2: Build Algorithmic&nbsp;<br>+ AI Growth Systems
               </h3>
               <p class="u-text u-text-5"> We align platform algorithms with adaptive intelligence so your system tests, improves, and automates the work that drives revenue.</p>
             </div>
           </div>
-          <div class="u-align-center u-container-style u-list-item u-palette-1-light-3 u-radius u-repeater-item u-shape-round u-list-item-3" data-animation-out="0" data-animation-name="customAnimationIn" data-animation-duration="1000" data-animation-delay="500">
+          <div class="u-align-center u-container-align-center u-container-style u-list-item u-palette-1-light-3 u-radius u-repeater-item u-shape-round u-list-item-3" data-animation-out="0" data-animation-name="customAnimationIn" data-animation-duration="1000" data-animation-delay="500">
             <div class="u-container-layout u-similar-container u-container-layout-4"><span class="u-align-center u-file-icon u-icon u-text-palette-1-base u-icon-3" data-animation-name="" data-animation-duration="0" data-animation-delay="0" data-animation-direction=""><img src="images/12644617-147c4a6f.png" alt=""></span>
               <h3 class="u-text u-text-6">Step 3: ​Create Predictable Revenue&nbsp;(&amp; Get Your Time Back)</h3>
               <p class="u-text u-text-7"> Your business begins running with clarity—so you spend less time hustling and more <br>time living.
@@ -202,7 +202,7 @@
         </div>
       </div>
     </section>
-    <section class="u-align-center u-clearfix u-section-5" id="sec-62c5">
+    <section class="u-align-center u-clearfix u-container-align-center u-section-5" id="sec-62c5">
       <div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xs u-sheet-1">
         <h2 class="u-text u-text-1">Top 5 Questions Clients Ask</h2>
         <div class="data-layout-selected u-clearfix u-expanded-width u-layout-wrap u-layout-wrap-1">
@@ -351,7 +351,7 @@
         </div>
       </div>
     </section>
-    <section class="u-align-center u-clearfix u-palette-5-light-2 u-section-7" id="sec-f45d">
+    <section class="u-align-center u-clearfix u-container-align-center u-palette-5-light-2 u-section-7" id="sec-f45d">
       <div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xs u-sheet-1">
         <h2 class="u-text u-text-1">FAQ</h2>
         <div class="u-accordion u-collapsed-by-default u-spacing-15 u-accordion-1" role="tablist">
