--- a/Page-1.html
+++ b/Page-1.html
@@ -27,9 +27,9 @@
     <meta property="og:description" content="">
     <meta property="og:type" content="website">
   <meta data-intl-tel-input-cdn-path="intlTelInput/"></head>
-  <body data-path-to-root="./" data-include-products="false" class="u-body u-clearfix u-xl-mode" data-lang="en"><header class="u-clearfix u-header u-header" id="header"><div class="u-clearfix u-sheet u-sheet-1">
-        <a href="#" class="u-image u-logo u-image-1" data-image-width="512" data-image-height="512">
-          <img src="images/Ascend_Logo_512x512_Trans.png" class="u-logo-image u-logo-image-1">
+  <body data-path-to-root="./" data-include-products="false" class="u-body u-clearfix u-xl-mode" data-lang="en"><header class="u-clearfix u-header u-header" id="header"><div class="u-clearfix u-sheet u-valign-middle-xl u-sheet-1">
+        <a href="./" data-page-id="919816448" class="u-image u-logo u-image-1" data-image-width="512" data-image-height="512">
+          <img src="images/Ascend_Logo_512x512_Trans.png" class="u-logo-image u-logo-image-1" title="Home">
         </a>
       </div></header>
     <section class="u-clearfix u-section-1" id="block-2">
