--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <meta property="og:description" content="Algorithmic growth systems for experts who want predictable revenue, better clients, and more time by aligning buyer psychology, AI, and measurable systems.">
     <meta property="og:type" content="website">
   <meta data-intl-tel-input-cdn-path="intlTelInput/"></head>
-  <body data-home-page="Home.html" data-home-page-title="Home" data-path-to-root="./" data-include-products="false" class="u-body u-clearfix u-overlap u-overlap-contrast u-overlap-transparent u-xl-mode" data-lang="en"><header class="u-clearfix u-header u-header" id="header"><div class="u-clearfix u-sheet u-valign-middle-xl u-sheet-1">
+  <body data-home-page="Home.html" data-home-page-title="Home" data-path-to-root="./" data-include-products="false" class="u-body u-clearfix u-overlap u-overlap-contrast u-overlap-transparent u-xl-mode" data-lang="en"><header class="u-clearfix u-header u-header" id="header"><div class="u-clearfix u-sheet u-sheet-1">
         <a href="./" data-page-id="919816448" class="u-image u-logo u-image-1" data-image-width="512" data-image-height="512">
           <img src="images/Ascend_Logo_512x512_Trans.png" class="u-logo-image u-logo-image-1" title="Home">
         </a>
