--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <h1 class="u-align-center u-text u-text-1">Algorithmic Growth Systems for Experts</h1>
         <h2 class="u-align-center u-text u-text-2">Amy Harrill Guides Established Service-Based Business Owners To Align Algorithms with Intelligent Systems To Create Predictable Revenue Without Constant Hustle<br>
         </h2>
-        <p class="u-align-center u-text u-text-default u-text-3"> Most experts are overwhelmed by algorithmic chaos, unpredictable revenue and a business that takes more time than it gives back.&nbsp;You shouldn't have to sacrifice your life to scale your expertise. Without a system to manage them, most experts stay exhausted and inconsistent. Amy Harrill helps experts create clarity, predictability, and freedom with a growth system designed to work for them.</p>
+        <p class="u-align-center u-text u-text-3"> Most experts are overwhelmed by algorithmic chaos, unpredictable revenue and a business that takes more time than it gives back.&nbsp;You shouldn't have to sacrifice your life to scale your expertise. Without a system to manage them, most experts stay exhausted and inconsistent. Amy Harrill helps experts create clarity, predictability, and freedom with a growth system designed to work for them.</p>
         <div class="u-container-style u-group u-palette-3-base u-radius u-shape-round u-group-1">
           <div class="u-container-layout u-container-layout-1">
             <div class="fr-view u-clearfix u-rich-text u-text u-text-4">
